# facetime

./: .gitignore  CMakeLists.txt  ProjectHome.md  howtobuild.md  requirement.md
Projects/HongFei/: CMakeLists.txt
Projects/HongFei/Relay/: epoll.c  log.c  timer.c
Projects/HongFei/mw/: CMakeLists.txt  audioout.cpp  packetList.cpp  videoout.cpp
Projects/HongFei/mw/sdl/: CMakeLists.txt  sdl_abstract.cpp
Projects/HongFei/mw/test/: CMakeLists.txt  test_record.cpp
Relay/: crypt.c  crypt.h  log.h  socket.c  stream.c  stream.h
Relay/Relay/Relay/: Relay.vcproj
cmake/: BuildGNUPackage.cmake  GlobalCompilerFlags.cmake  Install.cmake
cmake/platform/: Smp865x.cmake  X86.cmake
trunk/: test.txt
trunk/3rdParties/ffmpeg-0.7-rc1/: Changelog
trunk/Projects/HongFei/: CMakeLists.txt
trunk/Projects/HongFei/Relay/: CMakeLists.txt  buffer.h  datadecoder.c  main.c  socket.h  socket_manager.c
trunk/Projects/HongFei/Relay/config/: config.cpp
trunk/Projects/HongFei/mw/: decoder.cpp  decoder_impl.cpp  ffmpeg.h  windplayer.cpp
trunk/Projects/HongFei/mw/sdl/: CMakeLists.txt  sdl_abstract.cpp  sdl_abstract.h
trunk/Relay/: buffer.c  datadecoder.h  epoll.h  socket_manager.h  socket_sub.h  timer.h
trunk/Relay/Relay/: Relay.sln
trunk/Relay/config/: config.h
trunk/Sources/tinyxml/: CMakeLists.txt  Makefile  tinyxml.h
trunk/cmake/: BuildGNUPackage.cmake  Common.cmake  GlobalCompilerFlags.cmake  Option.cmake  Toolchain.cmake
trunk/document/: readme.txt
wiki/: howtobuild.wiki  requirement.wiki
