PROJECT(RELAY)

AUX_SOURCE_DIRECTORY(./ SRC_LIST)
AUX_SOURCE_DIRECTORY(./config SRC_LIST)
SET(EXECUTABLE_OUTPUT_PATH ../../bin)

ADD_DEFINITIONS(-g -W -Wall --std=c99 -D_REENTRANT -D_FILE_OFFSET_BITS=64 -D_LARGE_FILE -DRL_HAS_MSG -DDEBUG
-DRL_HAS_WARN -DRL_HAS_ERROR -DRL_HAS_DEBUG )

INCLUDE_DIRECTORIES(./)
ADD_EXECUTABLE(relay ${SRC_LIST})

TARGET_LINK_LIBRARIES(relay z)